trazabilidad resumen y alta

--- a/core/templates/vista_producto.html
+++ b/core/templates/vista_producto.html
@@ -155,7 +155,7 @@
                   Tipo
                 </th>
                 <th>
-                  Rubro
+                  Clase
                 </th>
               </tr>
             </thead>
@@ -172,7 +172,7 @@
                           {{producto.tipo}}
                         </td>
                         <td>
-                        {{producto.rubro}}
+                        {{producto.clase}}
                         </td>
                     </tr>
                 {% endfor %}
