--- a/core/templates/vista_producto_conf.html
+++ b/core/templates/vista_producto_conf.html
@@ -68,14 +68,60 @@
             </div>
             <div class="col-md-6">
               <div class="form-group row">
-                <label class="col-sm-3 col-form-label"></label>
+                <label class="col-sm-3 col-form-label">Tipo</label>
                 <div class="col-sm-9">
+                  {{form.tipo}}
+                  {{form.tipo.errors}}
                 </div>
               </div>
             </div>
         </div>
 
-  
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Unidad de medida</label>
+              <div class="col-sm-9">
+                {{form.um}}
+                {{form.um.errors}}
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label"></label>
+              <div class="col-sm-9">
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group row">
+            <label class="col-sm-3 col-form-label">Imagen</label>
+            <div class="col-sm-9">
+              {{form.image}}
+              {{form.image.erros}}
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group row">
+            <label class="col-sm-3 col-form-label">Vista previa</label>
+            <div class="col-sm-9">
+                <div class='card'>
+                  {% if modificacion %}
+                    <img id= 'id_preview' src={{prod.image.url}} alt="">
+                  {% else %}
+                    <img id= 'id_preview' src="" alt="">
+                    {% endif %}
+                  </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+
         {% if modificacion %}
         <button type="submit" name='ok' class="btn btn-primary mr-2">Actualizar</button>
         <button type="submit" name='borrar' class="btn btn-primary mr-2">Borrar</button>
@@ -118,7 +164,11 @@
                 {% for producto in productos %}
                     <tr>
                         <td class="py-1">
-                        <img src={{producto.producto.image.url}} alt="image"/>
+                        {% if producto.image %}
+                          <img src={{producto.image.url}} alt="image"/>
+                        {% else %}
+                          <img src={{producto.producto.image.url}} alt="image"/>
+                        {% endif %}
                         </td>
                         <td>
                             {% if producto.descripcion %}
@@ -141,6 +191,25 @@
       </div>
     </div>
   </div>
+<script type="text/javascript">
+    const archivo = document.getElementById("id_image");
+    const preview = document.getElementById("id_preview");
+    archivo.addEventListener("change", function() { 
+        getImgData();
+    });
+    function getImgData() {
+        const files = archivo.files[0];
+        if (files) {
+          const fileReader = new FileReader();
+          fileReader.readAsDataURL(files);
+          fileReader.addEventListener("load", function () {
+            preview.src = this.result;
+            {% comment %} preview.style.display = "block";
+            preview.innerHTML = '<img src="' + this.result + '" />'; {% endcomment %}
+          });    
+        }
+      }        
+</script>
 {% endblock %}
 {% block nav %}
 {% include 'nav_home.html' %}
