--- a/core/templates/vista_campo.html
+++ b/core/templates/vista_campo.html
@@ -32,7 +32,24 @@
             </div>
           </div>
         </div>
-
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">ciudad</label>
+              <div class="col-sm-9">
+                {{form.ciudad}}
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">vacio</label>
+              <div class="col-sm-9">
+                {{form.observaciones}}
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row">
             <div class="col-md-6">
               <div class="form-group row">
