--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -50,42 +50,9 @@
                 </div>
             </div>
         {% endfor %}
-    </div>
-    
-
+    </div> 
   </div>
-  <div class="row">
-    <div class="col-md-6 grid-margin transparent">
-      <div class="row"><div class="card-body">
-        <div class="d-flex justify-content-between">
-         <h3 class="card-title">Cotação Dolar</h3>
-         <a href="#" class="text-info">View all</a>
-        </div>
-          <div class="d-flex flex-wrap mb-5 align-text">
-            <div class="mr-5 mt-3">
-              <p class="text-muted ">Apertura</p>
-              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.apertura }}</h3>
-            </div>
-            <div class="mr-5 mt-3">
-              <p class="text-muted">Maximo</p>
-              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.maximo }}</h3>
-            </div>
-            <div class="mr-5 mt-3">
-              <p class="text-muted">Minimo</p>
-              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.minimo }}</h3>
-            </div>
-            <div class="mt-3">
-              <p class="text-muted">cierre</p>
-              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.cierre }}</h3>
-            </div> 
-    
-         <canvas id="dolar-chart"></canvas>
-       </div>            
-    </div>
-  </div> 
-     
- 
-  </div>
+  
   <div class="row">
     <div class="col-md-12 grid-margin stretch-card">
       <div class="card position-relative">
@@ -270,24 +237,23 @@
     <div class="col-md-6 grid-margin stretch-card">
       <div class="card">
         <div class="card-body">
-          <p class="card-title">Order Details</p>
-          <p class="font-weight-500">The total number of sessions within the date range. It is the period time a user is actively engaged with your website, page or app, etc</p>
+          <p class="card-title">Cotizacion Dolar</p>
           <div class="d-flex flex-wrap mb-5">
             <div class="mr-5 mt-3">
-              <p class="text-muted">Order value</p>
-              <h3 class="text-primary fs-30 font-weight-medium">12.3k</h3>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.apertura }}</h3>
+              <p class="text-muted ">Apertura</p>
             </div>
             <div class="mr-5 mt-3">
-              <p class="text-muted">Orders</p>
-              <h3 class="text-primary fs-30 font-weight-medium">14k</h3>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.maximo }}</h3>
+              <p class="text-muted">Maximo</p>              
             </div>
             <div class="mr-5 mt-3">
-              <p class="text-muted">Users</p>
-              <h3 class="text-primary fs-30 font-weight-medium">71.56%</h3>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.minimo }}</h3>
+              <p class="text-muted">Minimo</p>              
             </div>
             <div class="mt-3">
-              <p class="text-muted">Downloads</p>
-              <h3 class="text-primary fs-30 font-weight-medium">34040</h3>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.cierre }}</h3>
+              <p class="text-muted">cierre</p>              
             </div> 
           </div>
           <canvas id="order-chart"></canvas>
