--- a/core/templates/vista_rubro.html
+++ b/core/templates/vista_rubro.html
@@ -26,7 +26,7 @@
         {% else %}
         <button type="submit" name='ok' class="btn btn-primary mr-2">Nuevo</button>
         {% endif %}
-        <button type='button' class="btn btn-dark" onclick="window.location.href='/02-rubro';">Cancel</button>
+        <button type='button' class="btn btn-dark" onclick="window.location.href='/02-rubro';">Cancelo</button>
       </form>
     </div>
 </div>
